--- a/TwitterGo/Base.lproj/Main.storyboard
+++ b/TwitterGo/Base.lproj/Main.storyboard
@@ -271,9 +271,6 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="6gw-vb-6s3">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </refreshControl>
                     <connections>
                         <outlet property="currentTrend" destination="3ds-v4-ElG" id="L0W-3Q-G2s"/>
                         <outlet property="tableView" destination="nW7-Ob-iuA" id="QYL-ip-lii"/>
@@ -348,6 +345,10 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
+                        <activityIndicatorView key="backgroundView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" id="q9u-f7-dUm">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </activityIndicatorView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TweetImageCell" id="i2a-Zs-t2I" customClass="ImageCollectionViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -403,6 +404,7 @@
                     <connections>
                         <outlet property="collectionView" destination="ezL-9P-3qf" id="nGB-7R-VqB"/>
                         <outlet property="currentTrend" destination="GPq-UM-THS" id="B9S-x0-XCv"/>
+                        <outlet property="indicator" destination="q9u-f7-dUm" id="brB-DX-otz"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X4v-St-OEf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -708,7 +710,7 @@
         <image name="tweets_30px" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="RZC-AU-X4e"/>
-        <segue reference="E3I-FZ-gRa"/>
+        <segue reference="yz0-Tl-isD"/>
+        <segue reference="IpV-ir-8ve"/>
     </inferredMetricsTieBreakers>
 </document>
